# camelio

./: AGENTS.md  README.md  choku.opam  dune-project
docs/design-docs/: access-log.md  form-urlencoded.md  future-work.md  generic-pre-body-selector.md  http-request-limits-and-timeouts.md  http-server-baseline-and-client-readiness.md  https-client.md  index.md  initial-architecture.md  input-mapping-interoperability.md  minimal-http-client.md  minimal-router-dsl.md  minimal-server-handler-middleware-api.md  multipart-form-data.md  query-string.md  server-cookie-support.md  streaming-request-bodies.md  testing-support.md
docs/exec-plans/: index.md
docs/product-specs/: access-log.md  form-urlencoded.md  generic-pre-body-selector.md  https-client.md  index.md  input-mapping-interoperability.md  minimal-http-client.md  minimal-http1-server.md  minimal-router-dsl.md  minimal-server-api.md  multipart-form-data.md  query-string.md  server-cookie-support.md  testing-support.md
docs/references/: agentic-development-rules.md  eio-documentation.md  eio-tls.md  index.md  (+1 more)
examples/: upload_streaming.ml
lib/: body.ml  body.mli  client.ml  client.mli  cookie.ml  cookie.mli  dune  form.ml  form.mli  http1.mli  multipart.ml  multipart.mli  query.ml  query.mli  request.mli  response.mli  router.ml  router.mli  server.ml  server.mli  status.ml  status.mli
test/: dune  test_body.ml  test_choku_test.ml  test_client.ml  test_cookie.ml  test_form.ml  test_multipart.ml  test_query.ml  test_router.ml  test_server.ml  test_status.ml
test_support/: choku_test.ml  choku_test.mli  dune
(+11 files in other folders)
